// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox matches the snapshot 1`] = `
Array [
  <input
    className="OQVsK"
    id="test-id"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    htmlFor="test-id"
  >
    test label
  </label>,
]
`;

exports[`Checkbox matches the snapshot when an array is provided as a label 1`] = `
Array [
  <input
    className="OQVsK"
    id="test-id"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    htmlFor="test-id"
  >
    test label 
    using arrays
  </label>,
]
`;
